Fix top right text on narrow screen

--- a/content/assets/style.css
+++ b/content/assets/style.css
@@ -434,6 +434,9 @@ header a:hover {
     header h1 {
         grid-column: 1 / 3;
     }
+    header .logout.link-box {
+        grid-column: 2 / 3;
+    }
     #comments ul {
         border-width: 1px 0;
     }
